# HR-Data-Generator

./: CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml
hr_data_generation/: config.py  hr_gen.py
hr_data_generation/params/: employee_data.yaml  job_data.csv  location_data.csv  org_data.csv
notebooks/: 01_generate_date.ipynb  02_library_demo.ipynb
src/hr_data_generator/: __init__.py  assignments.py  compensation.py  employee.py  generator.py  hierarchy.py  loader.py  performance.py  time_series.py
src/hr_data_generator/data/: employee_data.yaml  job_data.csv
tests/: test_assignments.py  test_compensation.py  test_employee.py  test_hierarchy.py  test_integration.py  test_loader.py  test_performance.py
