[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hr-data-generator"
version = "0.1.0"
description = "Generate realistic SuccessFactors-style HR datasets for demos and testing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "HR Data Generator Team" }
]
keywords = ["hr", "data", "generator", "successfactors", "synthetic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hr_data_generator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
